syntax = "proto3";

option java_multiple_files = true; //modificar esto para js
option java_package = "grpc.wishlist";
option java_outer_classname = "WishListProto";
option objc_class_prefix = "WLP";

package wishlist;

//Messages
message Item {
    string name = 1;
}

message User {
    string name = 1;
    int32 id = 2;
    string email = 3;
}

message List {
    string name = 1;
    int32 id = 2;
    string content = 3;
    repeated Item item = 4;
}

message Request {
    User user = 1; //from which list
    Item item = 2; //which item
}

message Response {
    string message = 1;
}

//Interface
service WishList {
    /**
    * Add an article to user's list
    * Simple RPC
    */
    rpc AddItem (Request) returns (Response);

    /**
    * Delete an article from user's list
    * Simple RPC
    */
    rpc RemoveItem (Request) returns (Response);

    /**
    * Retreive user's list
    * Server-side streaming RPC
    */
    rpc GetList (User) returns (stream Item);
}
